tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-18/test000002.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 16
Stack: 
	#0 00000037 in remove_from_list (head=25686112, node=25686688) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:16
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
Info: 
	address: (Add w64 8
         (ReadLSB w64 16 a1))
	example: 8
	range: [0, 18446744073709551615]
	next: object at 25605984 of size 3
		MO7[3] allocated at global:.str
